--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
       <% if user_signed_in? %>
           <ul class="nav navbar-nav">
             <% if user_signed_in? %>
-                <li><%= link_to "My Bills", followed_path, class: "active" %></li>
+                <li><%= link_to "My Congress", politicians_path%></li>
             <% end %>
           </ul>
       <ul class="nav navbar-nav navbar-right">
