--- a/app/views/politicians/index.html.erb
+++ b/app/views/politicians/index.html.erb
@@ -1,27 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Politicians</h1>
-
-<table>
+<table class="table table-striped">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Contact Form</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @politicians.each do |politician| %>
+  <% @legislators.each do |legislator| %>
+
       <tr>
-        <td><%= politician.name %></td>
-        <td><%= link_to 'Show', politician %></td>
-        <td><%= link_to 'Edit', edit_politician_path(politician) %></td>
-        <td><%= link_to 'Destroy', politician, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= legislator["first_name"] %></td>
+        <td><%= legislator["last_name"] %></td>
+        <td><%= legislator["contact_form"] %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Politician', new_politician_path %>
